fixed layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@ body {
   height: 100%;
   background-color: black;
 }
+
+@media (min-width: 40rem) {
+  body {
+    height: 100vh;
+  }
+}
